lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:11: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
		if (getSol(c).y == getSol(c + 1).y )
                          ^Lander:13: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
			if (getSol(c).y == getSol(c + 2).y)
                                  ^Lander:15: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
				point1 = getSol(c)
                                               ^Lander:16: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
				point2 = getSol(c + 2)
                                               ^Lander:24: error: value debut is not a member of lessons.lander.universe.Segment
	fina.debut = point1
             ^Lander:25: error: value fin is not a member of lessons.lander.universe.Segment
	fina.fin = point2
             ^